# ros_boilerplate_webcam

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: cpp.launch  python.launch
scripts/: camera_publisher.py  camera_subscriber.py
src/: camera_publisher.cpp  camera_subscriber.cpp
